--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://iscjavier.github.io/sorting-visualizer/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,9 +20,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && xcopy /E .\\build .\\docs\\",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +44,6 @@
   "prettier": {
     "tabWidth": 2,
     "singleQuote": true
-  }
+  },
+  "devDependencies": {}
 }
